# spannerflow

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  MANIFEST.in  README.md  buf.yaml  config.html  config.html.md  engine.html  engine.html.md  graph_utils.html  graph_utils.html.md  grpc_server.html  grpc_server.html.md  index.html  index.html.md  installations.html  installations.html.md  pyproject.toml  pytest-coverage.txt  pytest.xml  robots.txt  rust_dataflow.html  rust_dataflow.html.md  search.json  settings.ini  setup.py  sitemap.xml  span.html  span.html.md
.github/workflows/: coverage.yml  docs.yml  proto_lint.yml  rust_lint.yml
nbs/: 00_config.ipynb  10_rust_utils.ipynb  15_span.ipynb  20_installations.ipynb  30_graph_utils.ipynb  40_grpc_server.ipynb  50_rust_dataflow.ipynb  60_engine.ipynb  index.ipynb  nbdev.yml  sidebar.yml
proto/: buf.yaml
proto/dataflow/v1/: dataflow.proto
python/: README.md  main.py  mypy.ini  requierments.txt
python/dataflow/v1/: dataflow_pb2.py  dataflow_pb2_grpc.py
python/templates/: Cargo.toml.jinja2  build.rs.jinja2  rust_test.rs.jinja2
spannerflow/: Cargo.toml  __init__.py  _modidx.py  build.rs  config.py  engine.py  graph_utils.py  grpc_server.py  installations.py  main.py  rust.py  rust_dataflow.py  rust_utils.py  span.py
spannerflow/dataflow/v1/: dataflow_pb2.py  dataflow_pb2.pyi  dataflow_pb2_grpc.py
spannerflow/proto/dataflow/v1/: dataflow.proto
spannerflow/rust_lib/: Cargo.toml  build.rs
spannerflow/rust_lib/src/: span.rs  std_ie_functions.rs
spannerflow/rust_server/: Cargo.toml  build.rs
spannerflow/rust_server/src/: main.rs
spannerflow/rust_span/: Cargo.toml
spannerflow/rust_span/src/: lib.rs  mod.rs  span.rs  std_ie.rs
spannerflow/src/: lib.rs  main.rs
spannerflow/templates/: Cargo.toml.jinja2  aggregate.rs.jinja2  build.rs.jinja2  ie_map.rs.jinja2  iterate.rs.jinja2  remote_aggregate.jinja2  remote_aggregate.rs.jinja2  rust_dataflow.rs.jinja2  rust_test.rs.jinja2
src/: main.rs
tests/: test_engine.py  test_graph_utils.py  test_grpc_server.py  test_rust_dataflow.py
