[workspace]
resolver = "2"
members = [
    "rust_span",
    "rust_server",
    "rust_lib"
]

[workspace.dependencies]
csv = "1.3.1"
differential-dataflow = "0.13.1"
futures = "0.3.31"
hex = "0.4.3"
lazy_static = "1.5.0"
libloading = "0.8.5"
ordered-float = "4.5.0"
prost = "0.13.3"
prost-types = "0.13.3"
fancy-regex = "0.14.0"
serde = { version = "1.0.216", features = ["derive", "rc"] }
serde_derive = "1.0.215"
sha1 = "0.10.6"
timely = "0.14.0" 
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
log = "0.4.22"
env_logger = "0.11.5"

[workspace.metadata.marker.lints]
marker_lints = "0.5.0"
