[package]
name = "spannerflow_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_grpc_server"
path = "src/main.rs"

[dependencies]
libloading = "0.8.5"
tonic = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.16"
lazy_static = "1.5.0"
csv = "1.3.1"
rust_span = { path = "../rust_span" }

[build-dependencies]
tonic-build = "0.12.3"

[workspace.metadata.marker.lints]
marker_lints = "0.5.0"
