[package]
name = "spannerflow_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_grpc_server"
path = "src/main.rs"

[dependencies]
libloading = { workspace = true}
tonic = { workspace = true}
prost = { workspace = true}
prost-types = { workspace = true}
tokio = { workspace = true }
tokio-stream = { workspace = true}
lazy_static = { workspace = true}
csv = { workspace = true}
rust_span = { path = "../rust_span" }
log = { workspace = true }
env_logger = { workspace = true }

[build-dependencies]
tonic-build = "0.12.3"